# gestor_terramoda_back

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.local.yaml  flake.nix
migrations/: 20251210141257_init.down.sql  20251210141257_init.up.sql  20251210142411_use_min_unit.down.sql  20251210142411_use_min_unit.up.sql  20251210152758_add_tel_customer.down.sql  20251210152758_add_tel_customer.up.sql  20251212101254_seed_data.down.sql  20251212101254_seed_data.up.sql
src/: main.rs
src/application/: dtos.rs  mod.rs  services.rs
src/application/commands/: edit_customer.rs  edit_product.rs  mod.rs  register_customer.rs  register_product.rs  register_sale.rs
src/application/queries/: generate_csv_report.rs  get_customer_by_cc.rs  get_customers.rs  get_product_by_sku.rs  get_products.rs  get_sale_by_id.rs  get_sales.rs  login.rs  mod.rs
src/domain/: entities.rs  mod.rs  repositories.rs  value_objects.rs
src/infrastructure/: mod.rs  services.rs
src/infrastructure/mysql_repositories/: customer_repository.rs  mod.rs  pool_connection.rs  product_repository.rs  sale_repository.rs
src/presentation/: common.rs  middlewares.rs  mod.rs
src/presentation/endpoints/: api.rs  auth.rs  mod.rs
src/presentation/endpoints/customers/: edit.rs  get_by_cc.rs  get_paginated.rs  mod.rs  register.rs
src/presentation/endpoints/products/: edit.rs  get_by_sku.rs  get_paginated.rs  mod.rs  register.rs
src/presentation/endpoints/reports/: mod.rs
src/presentation/endpoints/sales/: mod.rs  (+3 more)
src/shared/: error.rs  input_handler.rs  mod.rs  pagination.rs  resolver.rs
