[package]
name = "gestor_terramoda_back"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros", "chrono", "migrate"]}
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
